# sentinel-toolkit

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  supply-chain.yml
dashboard/: README.md  eslint.config.mjs  next.config.mjs  package-lock.json  package.json
dashboard/app/: layout.tsx  page.tsx
dashboard/components/: AggregationPanel.tsx  DiffPanel.tsx  FindingCard.tsx  SeverityBadge.tsx  SummaryBar.tsx  TrendChart.tsx  UploadReport.tsx
dashboard/lib/: diff.ts  types.ts
dashboard/public/: report.json  (+1 more)
docs/: aws-iam-policy.json  compliance.md
sentinel/: cli.py
tests/: conftest.py  test_audit_evidence.py  test_cli.py  test_cli_enhancements.py  test_cli_filter.py  test_cli_gating.py  test_cli_resilience.py  test_cli_scan.py  test_cloudscan_ebs_rds.py  test_cloudscan_iam.py  test_cloudscan_iam_posture.py  test_cloudscan_iam_privilege.py  test_cloudscan_multi_account.py  test_cloudscan_profile_integration.py  test_cloudscan_s3.py  test_cloudscan_s3_posture.py  test_cloudscan_scanner.py  test_cloudscan_sg.py  test_compliance.py  test_config.py  test_context.py  test_coverage_integrity.py  test_diff.py  test_finding.py  test_iam_policy_contract.py  test_logwatch_auth.py  test_logwatch_scanner.py  test_netmon_capture.py  test_netmon_flows.py  test_netmon_scanner.py  test_report.py  test_rule.py  test_rule_config.py  test_scanner.py  test_schema_compat.py  test_suppression.py  test_webscan_headers.py  test_webscan_scanner.py
(+40 files in other folders)
