[project]
name = "sentinel-toolkit"
version = "0.1.0"
description = "Sentinel — a modular defensive security toolkit"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "typer>=0.12",
    "jinja2>=3.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
sentinel = "sentinel.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sentinel*"]

[tool.setuptools.package-data]
sentinel = ["templates/*.j2"]
