[project]
name = "sentinel-toolkit"
version = "0.2.0"
description = "Sentinel — a modular defensive security toolkit"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "typer>=0.12",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "boto3>=1.34",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "moto>=5.0", "scapy>=2.5", "ruff>=0.6"]
capture = ["scapy>=2.5"]  # optional: live/pcap capture for netmon

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]  # long lines are mostly reference URLs

[project.scripts]
sentinel = "sentinel.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sentinel*"]

[tool.setuptools.package-data]
sentinel = ["templates/*.j2"]
